# upstox-mcp-server

./: .gitignore  README.md  docker-compose.yml  get_access_token.py  main.py  pyproject.toml  requirements.txt  setup.sh
scripts/: create_equity_collection.py  get_access_token.py
src/: server.py
src/lib/: milvus.py  upstox_auth.py
src/tools/: brokerage.py  market_quote.py  order.py  portfolio.py  profile.py  system.py
src/utils/: api.py  auth.py  constants.py  env.py
